:rainbow: Fix rainbow effect on mobile

--- a/www/css/index.less
+++ b/www/css/index.less
@@ -68,8 +68,8 @@ html, body {
   width: auto;
   pointer-events: none;
   background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
-  background-size: 1800% 1800%;
-  animation: rainbow 18s ease infinite, wiggle 5s ease infinite;
+  background-size: 1800% 100%;
+  animation: rainbow 18s linear infinite, wiggle 5s ease infinite;
 }
 
 .mdl-card__misccolor {
@@ -84,37 +84,15 @@ html, body {
 }
 
 @keyframes rainbow {
-  0% {
-    background-position: 0% 82%;
-  }
-
-  50% {
-    background-position: 100% 19%;
-  }
-
-  100% {
-    background-position: 0% 82%;
-  }
+  0% { background-position: 0% 100% }
+  50% { background-position: 100% 100% }
+  100% { background-position: 0% 100% }
 }
 
 @keyframes wiggle {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  25% {
-    transform: rotate(5deg);
-  }
-
-  50% {
-    transform: rotate(0deg);
-  }
-
-  75% {
-    transform: rotate(-5deg);
-  }
-
-  100% {
-    transform: rotate(0deg);
-  }
+  0% { transform: rotate(0deg); }
+  25% { transform: rotate(5deg); }
+  50% { transform: rotate(0deg); }
+  75% { transform: rotate(-5deg); }
+  100% { transform: rotate(0deg); }
 }
